index and contact page close to finished and styled

--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,19 @@
   <meta charset="UTF-14">
   <title>Basic-Portfolio</title>
   <link rel="stylesheet" type="text/css" href=assets/css/contact.css> </head> <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-  <div class="header" style="padding-top: 0px;">
-    <div class="headercontainer">
-      <a href="#default" class="name">Lexie Murphy</a>
-      <div class="header-right">
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </div>
-    </div>
-  </div>
 
   <section id="mainmiddlesection">
 
-    <header class="Contact">Contact</header>
+    <header class="Contact">Contact
+      <div class="homeIconSection">
+        <a href="index.html"><img class="homeIcon" src="assets/images/HomeIcon.png" alt="Home"></a>
+      </div>
+    </header>
 
     <form class="form" action="/action_page.php">
       Name:<br>
@@ -36,7 +34,19 @@
 
   </section>
 
-  <footer>Copyright ©</footer>
+  <footer>
+    <div class="icon-nav-section">
+      <div class="row">
+        <div class="col-md-12" style=padding:20px>
+          <div class="iconsRow">
+            <a href="https://LinkedIn.com"><img class="icon" src="assets/images/LinkedInIcon.png" alt="LinkedIn"></a>
+            <a href="https://github.com/LexieMurphy"><img class="icon" src="assets/images/GitHubIcon.png" alt="GitHub"></a>
+            <a href="portfolio.html"><img class="icon" src="assets/images/PortfolioIcon.png" alt="Portfolio"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   </body>
 
