got other pages cleaned up and links added to projects

--- a/contact.html
+++ b/contact.html
@@ -20,16 +20,23 @@
     </header>
 
     <form class="form" action="/action_page.php">
-      Name:<br>
-      <input class="forminput" type="text" name="name">
-        <br>
+      Lexie Murphy
+      <br>
+      <br>
       Email:<br>
-      <input class="forminput" type="text" name="email">
+      <p>Lexie.Murphy88@gmail.com</p>
         <br>
-      Message:<br>
-      <input class="forminput" type="text" name="message" style="height:200px">
-        </br>
-      <input class="formsubmit" type="submit" value="Submit">
+      Phone:<br>
+      <p>(913) 568-9560</p>
+      <br>
+      <div>
+      <p>Link to Resume</p>
+      <a href="assets/images/Lexie Murphy - Resume 2019.jpg" download="Lexie Murphy - Resume 2019">
+        <img src="/assets/images/Lexie Murphy - Resume 2019.jpg" alt="Lexie Murphy - Resume 2019" width="104" height="142">
+      </a>
+      </div>
+      
+
     </form> 
 
   </section>
@@ -41,6 +48,7 @@
           <div class="iconsRow">
             <a href="https://LinkedIn.com"><img class="icon" src="assets/images/LinkedInIcon.png" alt="LinkedIn"></a>
             <a href="https://github.com/LexieMurphy"><img class="icon" src="assets/images/GitHubIcon.png" alt="GitHub"></a>
+            <a href="resume.html"><img class="icon" src="assets/images/ResumeIcon.png" alt="Resume"></a>
             <a href="portfolio.html"><img class="icon" src="assets/images/PortfolioIcon.png" alt="Portfolio"></a>
           </div>
         </div>
