--- a/portfolio.html
+++ b/portfolio.html
@@ -3,77 +3,85 @@
 
 <head>
   <meta charset="UTF-14">
-  <title>Basic-Portfolio</title>
+  <title>LexieMurphy-Portfolio</title>
   <link rel="stylesheet" type="text/css" href=assets/css/portfolio.css> </head> <body>
-  <link rel="stylesheet" type="text/css" href=assets/images/portfolio.css> </head> <body>
-
-  <div class="header" style="padding-top: 0px;">
-    <div class="headercontainer">
-      <a href="index.html" class="name">Lexie Murphy</a>
-      <div class="header-right">
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </div>
-    </div>
-  </div>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
   <section id="mainmiddlesection">
 
-    <header class="Portfolio">Portfolio</header>
+    <header class="Portfolio">Portfolio
+      <div class="homeIconSection">
+        <a href="index.html"><img class="homeIcon" src="assets/images/HomeIcon.png" alt="Home"></a>
+      </div>
+    </header>
 
-<!-- Portfolio Gallery Grid -->
-<div class="row">
-  <div class="column">
-    <div class="content">
-      <a href="https://lexiemurphy.github.io/Phychic-Game/"><img src="./assets/images/mountains.jpg" alt="Mountains" style="width:260px">
-      <h3 class="bottom-center">Psychic Game</h3></a>
-    </div> 
-  </div>
-  <div class="column">
-    <div class="content">
-        <a href="https://lexiemurphy.github.io/unit-4-game/"><img src="./assets/images/mountains.jpg" alt="Mountains" style="width:260px">
-      <h3 class="bottom-center">Crystal Collector</h3>
+    <!-- Portfolio Gallery Grid -->
+    <div class="row">
+      <div class="column">
+        <div class="content">
+          <a href="https://lexiemurphy.github.io/TriviaGame/"><img src="./assets/images/BeatlesTriviaIcon.png" alt="Beatles Trivia"
+              style="width:260px">
+            <h3 class="bottom-center">Beatles Trivia</h3>
+          </a>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <a href="https://lexiemurphy.github.io/unit-4-game/"><img src="./assets/images/CrystalCollectorIcon.png" alt="Crystal Collector"
+              style="width:260px">
+            <h3 class="bottom-center">Crystal Collector</h3>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <a href="https://lexiemurphy.github.io/GifTastic/"><img src="./assets/images/GifTasticIcon.png" alt="GifTastic"
+              style="width:260px">
+            <h3 class="bottom-center">GifTastic</h3>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="column">
-    <div class="content">
-        <a href="https://lexiemurphy.github.io/TriviaGame/"><img src="./assets/images/mountains.jpg" alt="Mountains" style="width:260px">
-      <h3 class="bottom-center">Trivia Game</h3>
+    <div class="row">
+      <div class="column">
+        <div class="codeLinksSection">
+          <a href="https://github.com/LexieMurphy/TriviaGame"><img class="codeLinks" src="assets/images/PortfolioIcon.png"
+              alt="Link to Code"></a>
+        </div>
+      </div>
+      <div class="column">
+          <div class="codeLinksSection">
+            <a href="https://github.com/LexieMurphy/unit-4-game"><img class="codeLinks" src="assets/images/PortfolioIcon.png"
+                alt="Link to Code"></a>
+          </div>
+        </div>
+        <div class="column">
+            <div class="codeLinksSection">
+              <a href="https://github.com/LexieMurphy/GifTastic"><img class="codeLinks" src="assets/images/PortfolioIcon.png"
+                  alt="Link to Code"></a>
+            </div>
+          </div>
     </div>
-  </div>
-  <div class="column">
-    <div class="content">
-        <a href="https://lexiemurphy.github.io/GifTastic/"><img src="./assets/images/mountains.jpg" alt="Mountains" style="width:260px">
-      <h3 class="bottom-center">GifTastic</h3>
+
+  </section>
+
+  <footer>
+    <div class="icon-nav-section">
+      <div class="row">
+        <div class="col-md-12" style=padding:20px>
+          <div class="iconsRow">
+            <a href="https://LinkedIn.com"><img class="icon" src="assets/images/LinkedInIcon.png" alt="LinkedIn"></a>
+            <a href="https://github.com/LexieMurphy"><img class="icon" src="assets/images/GitHubIcon.png" alt="GitHub"></a>
+            <a href="resume.html"><img class="icon" src="assets/images/ResumeIcon.png" alt="Resume"></a>
+            <a href="contact.html"><img class="icon" src="assets/images/ContactIcon.png" alt="Contact"></a>
+
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+  </footer>
 
-<div class="row">
-  <div class="column">
-    <div class="content">
-        <a href="https://lexiemurphy.github.io/TrainTime/"><img src="./assets/images/mountains.jpg" alt="Mountains" style="width:260px">
-      <h3 class="bottom-center">Train Time</h3>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-        <a href="https://hsaxion8.github.io/TeamProject1/"><img src="./assets/images/mountains.jpg" alt="Mountains" style="width:260px">
-      <h3 class="bottom-center">nowChow</h3>
-    </div>
-  </div>
-</div>
-
-</div>
-
-</section>
-
-<footer>Copyright ©</footer>
-
-</body>
+  </body>
 
 </html>
